--- a/src/conference/templates/review_paper.html
+++ b/src/conference/templates/review_paper.html
@@ -12,7 +12,7 @@
 	<h3>Welcome {{ user.first_name }}</h3>
 	{% if user.is_staff %}<h3>You login as a Staff</h3>{% endif %}
 	<a href="{% url 'conference:welcome' %}">Conference Page</a><br>
-	<a href="{% url 'conference:view_paper' %}">View Paper</a><br>
+	<a href="{% url 'conference:view_all_paper' %}">View Paper</a><br>
 	{% if not user.is_staff %}<a href="{% url 'conference:submit_paper' %}">Submit Paper</a>{% endif %}<br>
 	{% if messages %}{% for m in messages %}{{ m }}<br>{% endfor %}{% endif %}
 	{% if paper is not None %}
