--- a/src/conference/templates/submit_paper.html
+++ b/src/conference/templates/submit_paper.html
@@ -11,7 +11,7 @@
     <h3>Welcome {{ user.first_name }}</h3>
     {% if user.is_staff %}<h3>You login as a Staff</h3>{% endif %}
 	<a href="{% url 'conference:welcome' %}">Conference Page</a><br>
-	<a href="{% url 'conference:view_paper' %}">View all Paper</a><br>
+	<a href="{% url 'conference:view_all_paper' %}">View all Paper</a><br>
     {% if not user.is_staff %}<a href="{% url 'conference:submit_paper' %}">Submit Paper</a>{% endif %}<br><br>
 	{% if messages %}
 		{% for m in messages %}{{ m }}<br>{% endfor %}
