--- a/src/conference/templates/welcome.html
+++ b/src/conference/templates/welcome.html
@@ -1,17 +1,15 @@
 {% extends "base.html" %}
-
+{% load staticfiles %}
 {% block head_title %}Welcome | {{ block.super }}{% endblock %}
 
 {% block css %}
-	<link rel="stylesheet" type="text/css" href="/static/admin/css/base.css">
-	<link rel="stylesheet" type="text/css" href="/static/admin/css/forms.css">
 {% endblock %}
 
 {% block content %}
 <div class="frame_artical">
 	<h3>Welcome {{ user.first_name }}</h3>
 	{% if user.is_staff %}<h3>You login as a Staff</h3>{% endif %}
-	<a href="{% url 'conference:view_paper' %}">View Paper</a><br>
+	<a href="{% url 'conference:view_all_paper' %}">View Paper</a><br>
 	{% if user.is_authenticated %}
 		{% if not user.is_staff %}
 			<a href="{% url 'conference:submit_paper' %}">Submit Paper</a>
